Fix Padding on Smaller Screen Sizes

--- a/css/project.css
+++ b/css/project.css
@@ -123,7 +123,6 @@ main {
     width: 100%;
     padding-top: 56.25%;
     height: 0;
-    margin-bottom: var(--spacing);
 }
 
 .iframe__container iframe {
@@ -136,17 +135,17 @@ main {
 
 .main__project-images > picture {
     width: 100%;
+    padding-bottom: var(--spacing);
 } 
 
 .main__project-images > picture > img {
     width: 100%;
     height: 100%;
     cursor: zoom-in;
-    margin-bottom: var(--spacing);
 }
 
-.iframe__container:last-child, .main__project-images > picture > img {
-    margin-bottom: 0;
+.iframe__container:last-child, .main__project-images > picture:last-child {
+    padding-bottom: 0;
 }
 
 @media only screen and (min-width: 1400px) {
@@ -170,14 +169,9 @@ main {
 
     .main__project-images > picture {
         padding-right: var(--spacing);
-        padding-bottom: var(--spacing);
     }
 
     .main__project-images > picture:nth-child(even) {
         padding-right: 0;
-    }
-
-    .main__project-images > picture:last-child{
-        padding-bottom: 0;
     }
 }
